# sqlite3_demo

./: CMakeLists.txt  do_delete.cpp  do_delete.h  do_insert.cpp  do_insert.h  main.cpp  student.db
